--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,12 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: question6-service
+  name: {{ include "examchart.fullname" . }}
+  labels:
+    {{- include "examchart.labels" . | nindent 4 }}
 spec:
-  type: NodePort
+  type: {{ .Values.service.type }}
   ports:
-  - port: 80
-    protocol: TCP
-    targetPort: 80
+    - port: {{ .Values.service.port }}
+      targetPort: http
+      protocol: TCP
+      name: http
   selector:
-    app: devops_exam
+    {{- include "examchart.selectorLabels" . | nindent 4 }}
